--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,32 +1,35 @@
+.aerospike-logo {
+  margin-bottom: 100px;
+}
 .app {
-  background: #FFFFFF;
-  margin: auto;
-  width: 50%;
-
-  padding: 10px;
+  background: #ffffff;
+  display: table;
+  margin: 50px auto;
+  text-align: center;
 }
 
 .todo-list {
-  background: #DCDCDC;
-  border-radius: 4px;
-  max-width: 400px;
   padding: 5px;
+  width: 500px;
 }
 
 .todo {
   align-items: center;
-  background: #F5F5F5;
-  border-radius: 3px;
+  background: #f5f5f5;
+  border-radius: 10px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
   display: flex;
-  font-size: 12px;
+  font-size: 16px;
   justify-content: space-between;
-  margin-bottom: 6px;
-  padding: 3px 10px;
-
+  margin: 30px 0;
+  padding: 10px 20px;
 }
 
-.todo input {
-  margin-right: 10px;
+.todo-input {
+  border-radius: 5px;
+  border: 1px solid black;
+  margin-left: 5px;
+  margin-right: 15px;
+  padding: 12px 15px;
+  width: 420px;
 }
-
